# parking-assistant

./: .env.example  .gitignore  README.md  app.py  docker-compose.yml  pyproject.toml
data/: parking_knowledge.json
src/parking_assistant/: config.py  models.py
src/parking_assistant/agents/: admin.py  chatbot.py
src/parking_assistant/evaluation/: metrics.py
src/parking_assistant/graph/: state.py  workflow.py
src/parking_assistant/guardrails/: filters.py
src/parking_assistant/mcp/: server.py
src/parking_assistant/rag/: knowledge.py  retriever.py  vectorstore.py
terraform/: main.tf  outputs.tf  user_data.sh  variables.tf
tests/: conftest.py  test_admin.py  test_guardrails.py  test_mcp.py  test_rag.py  test_reservation.py
